# upperLowerBounds

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  SupportedRules.md  bounds.pro  build.sh  buildGui.sh  buildGuiRelease.sh  buildGuiWin32.sh  buildGuiWin32Release.sh  buildRelease.sh  buildWin32.sh  buildWin32Release.sh  default.nix  runTests.sh
src/: defs.h  main.cpp
src/gui/: circleAreaWindow.cpp  circleAreaWindow.h  circlePerimeterWindow.cpp  circlePerimeterWindow.h  circle_area.ui  circle_perimeter.ui  equTrianAreaWindow.cpp  equTrianAreaWindow.h  equTrianPerimeterWindow.h  equTrianPerimeterwindow.cpp  equ_trian_area.ui  equ_trian_perimeter.ui  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  parallelogramAreaWindow.cpp  parallelogramAreaWindow.h  parallelogramPerimeterWindow.cpp  parallelogramPerimeterWindow.h  parallelogram_area.ui  parallelogram_perimeter.ui  rectangleAreaWindow.cpp  rectangleAreaWindow.h  rectanglePerimeterWindow.cpp  rectanglePerimeterWindow.h  rectangle_area.ui  rectangle_perimeter.ui  squareAreaWindow.cpp  squareAreaWindow.h  squarePerimeterWindow.cpp  squarePerimeterWindow.h  square_area.ui  square_perimeter.ui  triangleAreaWindow.cpp  triangleAreaWindow.h  trianglePerimeterWindow.cpp  trianglePerimeterWindow.h  triangle_area.ui  triangle_perimeter.ui
src/methods/circle/: area.cpp  circle.h  perimeter.cpp
src/methods/equ_triangle/: area.cpp  equ_triangle.h  height.cpp  perimeter.cpp
src/methods/parallelogram/: area.cpp  parallelogram.h  parellelogram.h  perimeter.cpp
src/methods/rectangle/: area.cpp  perimeter.cpp  rectangle.h
src/methods/square/: area.cpp  perimeter.cpp  square.h
src/methods/trapezoid/: trapezoid.h
src/methods/triangle/: area.cpp  perimeter.cpp  triangle.h
tests/: CircleTest.cpp  EquTriangleTests.cpp  ParallelogramTest.cpp  RectangleTest.cpp  SquareTests.cpp  TriangleTests.cpp
